testsuite/poke.pkl/scons-diag-3.pk
/* { dg-do compile } */

type Foo = struct { int i; long j; };

var a = Foo { i = 10, 20 };  /* { dg-error "" } */
